PROJECT(crystal_facet_uml)
CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -D_XOPEN_SOURCE=700 -O2" )
INCLUDE_DIRECTORIES(../gui/source)
INCLUDE_DIRECTORIES(../gui/include)
INCLUDE_DIRECTORIES(../main/source)
INCLUDE_DIRECTORIES(../log/include)
INCLUDE_DIRECTORIES(../trace/source)
INCLUDE_DIRECTORIES(../trace/include)
INCLUDE_DIRECTORIES(../ctrl/source)
INCLUDE_DIRECTORIES(../ctrl/include)
INCLUDE_DIRECTORIES(../data/source)
INCLUDE_DIRECTORIES(../data/include)
INCLUDE_DIRECTORIES(../sqlite/source)
INCLUDE_DIRECTORIES(../sqlite/include)
INCLUDE_DIRECTORIES(/usr/include/cairo)
INCLUDE_DIRECTORIES(/usr/include/freetype2)
INCLUDE_DIRECTORIES(/opt/gnome/include/gtk-3.0)
INCLUDE_DIRECTORIES(/opt/gnome/lib/gtk-3.0/include)
INCLUDE_DIRECTORIES(/opt/gnome/include/glib-3.0)
INCLUDE_DIRECTORIES(/opt/gnome/lib/glib-3.0/include)
INCLUDE_DIRECTORIES(/opt/gnome/include/atk-1.0)
INCLUDE_DIRECTORIES(/opt/gnome/include/gtk-3.0/gtk)
INCLUDE_DIRECTORIES(/opt/gnome/include/pango-1.0) 
INCLUDE_DIRECTORIES(/usr/include/pango-1.0)
INCLUDE_DIRECTORIES(/usr/include/gio-unix-2.0)
INCLUDE_DIRECTORIES(/usr/include/atk-1.0)
INCLUDE_DIRECTORIES(/usr/lib/glib-3.0/include)
INCLUDE_DIRECTORIES(/usr/lib/gtk-3.0/include)
INCLUDE_DIRECTORIES(/usr/include/gtk-3.0)
INCLUDE_DIRECTORIES(/usr/lib64/gtk-3.0/include)
INCLUDE_DIRECTORIES(/usr/include/glib-2.0)
INCLUDE_DIRECTORIES(/usr/lib64/glib-2.0/include)
INCLUDE_DIRECTORIES(/usr/include/gdk-pixbuf-2.0)
INCLUDE_DIRECTORIES(/usr/lib/arm-linux-gnueabihf/glib-2.0/include)
INCLUDE_DIRECTORIES(/usr/lib/arm-linux-gnueabihf/gtk-3.0/include)
LINK_DIRECTORIES(/opt/gnome/lib)
LINK_DIRECTORIES(/opt/gnome/lib/gtk-3.0)
LINK_DIRECTORIES(/usr/lib/)
LINK_DIRECTORIES(/usr/lib64/)
SET(crystal_facet_uml_BINARY_DIR ../bin)
SET(crystal_facet_uml_SOURCE_DIR ..)
FILE(GLOB mySource ../gui/source/*.c ../main/source/*.c ../trace/source/*.c ../ctrl/source/*.c ../data/source/*.c ../sqlite/source/sqlite3.c)
FILE(GLOB myHeaders ../gui/source/*.h ../gui/include/*.h ../trace/include/*.h ../log/include/*.h ../ctrl/include/*.h ../data/include/*.h ../sqlite/include/sqlite3.h)

ADD_EXECUTABLE(crystal_facet_uml ${mySource} ${myHeaders})
TARGET_LINK_LIBRARIES(crystal_facet_uml gtk-3 gdk-3 glib-2.0 cairo gobject-2.0 freetype pthread dl)
SET_TARGET_PROPERTIES(crystal_facet_uml PROPERTIES LINKER_LANGUAGE C)



